Fixed navbar related issue with z-index, added coordinate marker element for easier placement

--- a/public/css/canvas.css
+++ b/public/css/canvas.css
@@ -1,8 +1,12 @@
-canvas{
+#canvasContainer{
+	margin-top: 120px;
 	border-style: dotted;
 	border-color: black;
 	border-width: 1px;
-	margin-top: 120px;
+	width: 20000px;
+	height: 20000px;
+}
+canvas{	
 	transform: scale(20);
    	transform-origin: 0 0;
 	image-rendering: pixelated; 
@@ -176,7 +180,21 @@ button.colourchoice{			/*The colour pallet buttons*/
 	transition: background-color 1s;
 	pointer-events: none;
 }
-#fadeoutGone{
-	background-color: rgb(0, 0, 0, 0);
-	
+
+#positionMarker{
+	border: inset;
+	display: block;
+	width: 110px;
+	height: 35px;
+	position: fixed;
+	top: 130px;
+	left: 0;
+	background-color: #000000;
+	color: #fff;
+	font-size: 16px;
+}
+#positionMarker p{
+	padding-top: 0px;
+	margin-top: 5px;
+	padding-left: 2px;
 }
